# libft

./: .main.c.swp  CMakeLists.txt  Makefile  Makefile.42  README.md  ft_strlen.c
conversion/: ft_atof.c  ft_atoi.c  ft_atoll.c  ft_lltoa.c
ctype/: ft_isalnum.c  ft_isdigit.c  ft_isescape.c  ft_isnumber.c  ft_isprint.c
display/: ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_puterror.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c
galloc/: allocate.c  clear_memory.c  ft_gmemalloc.c
gc/: gc.c  gc_free.c  gc_strdup.c  gc_strjoin.c  gc_strnew.c  gc_strsplit.c  gc_strsub.c
gnl/: get_next_line.c
includes/: bintree.h  galloc.h  gc.h  get_next_line.h  libft.h  list.h  stack.h  vector.h
libft/: Makefile  libft.h
list/: ft_lstadd.c  ft_lstdelone.c  ft_lstiter.c  ft_lstswap.c  list_create_node.c  list_destroy.c  list_erase.c  list_push_back.c  list_push_front.c
math/: ft_abs.c  ft_bpow.c  ft_min.c
memory/: ft_memccpy.c  ft_memchr.c  ft_memcpy.c
stack/: stack_byte_capacity.c  stack_byte_size.c  stack_destroy.c  stack_get_element.c  stack_init.c  stack_is_empty.c  stack_is_initialized.c  stack_move.c  stack_move_array.c  stack_move_data.c  stack_pop.c  stack_push.c  stack_second.c  stack_top.c
strings/: ft_strcat.c  ft_strchri.c  ft_strcmp.c  ft_strequ.c  ft_striter.c  ft_strsplit.c  ft_strsplit_clear.c  ft_strsub.c  ft_strtrim.c
vector/: :Wq  vector_byte_capacity.c  vector_byte_size.c  vector_capacity_size.c  vector_chr.c  vector_clear.c  vector_copy.c  vector_destroy.c  vector_erase.c  vector_get_element.c  vector_get_maxi.c  vector_get_median.c  vector_init.c  vector_insert_data.c  vector_is_empty.c  vector_is_initialized.c  vector_is_sorted.c  vector_is_unique.c  vector_memmove.c  vector_move_array.c  vector_move_back_array.c  vector_move_back_data.c  vector_offset.c  vector_pop_back.c  vector_pop_front.c  vector_push_back_array.c  vector_push_back_data.c  vector_push_front_data.c  vector_qsort.c  vector_reallocate.c  vector_resize.c  vector_set_element.c
